fix z-index positioning for settings menu

--- a/Files/src/css/component/shelf/settings-menu.component.scss
+++ b/Files/src/css/component/shelf/settings-menu.component.scss
@@ -20,7 +20,7 @@
 	width: 300px;
 	left: auto;
 	right: 0;
-	z-index: 1;
+	z-index: 2;
 }
 
 .settings-menu-header {
